# todo

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml  setup.cfg  tasks.db  tasks_old.db
tests/: conftest.py  test_a.py  test_app.py  test_app_content.py  test_app_redirect.py  test_todo_list.py  test_todo_model_task.py
todo/: __init__.py  __main__.py  logger.conf
todo/todolist/: todolist.py
todo/todolist/models/: task.py
todo/todolist/static/css/: style.css
todo/todolist/templates/todolist/: 404_page.html  index.html  task_info.html  task_list.html
